Add: Problem7 solution